--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -357,7 +357,7 @@ li {
         font-family: 'allerregular';
         font-size: 13px;
         letter-spacing: 0;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
         @media(max-width:1200px) {
             font-size: 10px;
         }
@@ -401,7 +401,7 @@ li {
     .topMenu {
         background-color: #E9204A !important;
         color:#fff !important;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
     }
 }
 &:last-child {
@@ -427,7 +427,7 @@ li {
         text-transform: uppercase;
         width: 100px;
         border-right: 1px Solid #484848;
-        transition: all 0.1s ease-in;
+        transition: all 0.1s linear;
         @media(max-width:1200px) {
             width: 80px;
         }
@@ -459,7 +459,7 @@ li {
            &:hover {
             background: #E9204A !important;
             color:#fff;
-            transition: all 0.1s ease-in;
+            transition: all 0.1s linear;
         }
     }
 
@@ -675,11 +675,11 @@ li {
     margin-top:30px;
     font-weight:bold;
     letter-spacing:1px;
-    transition: all 0.1s ease-in;
+    transition: all 0.1s linear;
     &:hover {
         background:#E9204A;
         color:#ffffff;
-        transition: all 0.1s ease-in;
+        transition: all 0.1s linear;
     }
     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
 
@@ -711,8 +711,8 @@ li {
  display:block;
  position:absolute;
  bottom:-15px;
- -webkit-transition: all 0.2s ease-in; 
- transition: all 0.2s ease-in;
+ -webkit-transition: all 0.2s linear; 
+ transition: all 0.2s linear;
  .btn {
    display:inline-block;
    padding-top:5px;
@@ -722,7 +722,7 @@ li {
    height:60px;
    width:125px;
    border-radius: 100px 100px 0 0;
-    transition: all 0.2s ease-in;
+    transition: all 0.2s linear;
    // -moz-border-radius: 150px 150px 0 0;
    // -webkit-border-radius: 150px 150px 0 0;
 
@@ -805,7 +805,7 @@ li {
 }
 .quarter, .quarter2, .odd, .even,.section-container {
     .semicircle {
-        transition:all 0.2s ease-in;
+        transition:all 0.2s linear;
     }
     &:hover{
         .semicircle {
@@ -999,12 +999,12 @@ li {
     background-color: #4c4b4c;
     .key {
         color:#fff !important;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
     }
     &:hover {
         .key {
             color:#E9214B !important;
-            transition: all 0.2s ease-in;
+            transition: all 0.2s linear;
         }
     }  
     .section-inner {
@@ -1024,12 +1024,12 @@ li {
             .semicircle {
                 background-color: #686969;
                 border-color: #686969;
-                transition: all 0.2s ease-in;
+                transition: all 0.2s linear;
             }
         }
     }
     .post-navigate {
-        transition: all 0.2s ease-in !important;
+        transition: all 0.2s linear !important;
     }
     &:hover {
         & .post-navigate {
@@ -1108,10 +1108,10 @@ li {
     background-color: rgba(0, 0, 0, 0.75);
     a {
         color: #FFF;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
         &:hover {
             color: #8cc344;
-            transition: all 0.2s ease-in;
+            transition: all 0.2s linear;
         }
     }
     h4 {
@@ -1317,12 +1317,12 @@ li {
     margin-top:30px;
     font-weight:bold;
     letter-spacing:1px;
-    transition: all 0.2s ease-in;
+    transition: all 0.2s linear;
     &:hover {
         background:#E9204A;
         color:#ffffff;
         border: none;  
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
     }
     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
 
@@ -1417,14 +1417,14 @@ li {
             box-sizing: border;
             border-bottom: 1px solid #575656; 
             cursor: pointer;
-            transition: all 0.2s ease-in;
+            transition: all 0.2s linear;
             @media (max-width: 769px) {
                 box-sizing: border;
                 border-bottom: 1px solid #575656; 
             }
             &:hover {
                 color: #8cc344;
-                transition: all 0.2s ease-in;
+                transition: all 0.2s linear;
             }
      }
  }
@@ -1488,18 +1488,18 @@ li {
         }
          img {
             transform: scale(1);
-            -webkit-transition: all 0.3s ease-in;
-            -moz-transition: all 0.3s ease-in;
-            transition: all 0.3s ease-in;
+            -webkit-transition: all 0.3s linear;
+            -moz-transition: all 0.3s linear;
+            transition: all 0.3s linear;
         }
     }
     .content:hover  {
         .img-wrapper {
             img {
                 transform: scale(1.1);
-                -webkit-transition: all 0.3s ease-in;
-                -moz-transition: all 0.3s ease-in;
-                transition: all 0.3s ease-in;
+                -webkit-transition: all 0.3s linear;
+                -moz-transition: all 0.3s linear;
+                transition: all 0.3s linear;
             }
         }
     }
@@ -1566,7 +1566,7 @@ li {
         vertical-align:top;
         display: inline-block;
         padding: 0 30px;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
         a {
             font-size: 14px;
             color: #807f7f;
@@ -1575,7 +1575,7 @@ li {
         }
         &:hover {
             background-color: #c31439;
-            transition: all 0.2s ease-in;
+            transition: all 0.2s linear;
             a {
                 color: #FFF;
             }
@@ -1664,11 +1664,11 @@ li {
     }
     a {
         color: #8cc344;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
 
         &:hover {
             color: #5a5a5a;
-            transition: all 0.2s ease-in;
+            transition: all 0.2s linear;
         }
     }
 }
@@ -1735,7 +1735,7 @@ li {
         text-transform: uppercase;
         text-align: center;
         cursor: pointer;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
     }
     ul {
         margin-left: 10px;
@@ -1745,7 +1745,7 @@ li {
             color: @gray + 50;
             font-size: 10px;
             margin-top: 10px;
-            transition: all 0.2s ease-in;
+            transition: all 0.2s linear;
         }
     }
 }
@@ -1839,11 +1839,11 @@ ul {
     font-weight: normal;
     padding:5px 0px 5px 5px;
     border-radius: 0px;    
-    transition: all 0.2s ease-in;
+    transition: all 0.2s linear;
     &:hover {
         background:#c31439;
         color:#ffffff;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
     }
 }
 
@@ -1893,7 +1893,7 @@ height: 75px;
         font-weight: normal;
         padding:5px 0px 5px 5px;
         border-radius: 0px;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
 
     }
     .duration_div {
@@ -1915,7 +1915,7 @@ height: 75px;
             padding-bottom: 0;
             margin-right: 0px;
             padding-right: 2px;
-            transition: all 0.2s ease-in;
+            transition: all 0.2s linear;
         }
     }
 
@@ -2046,7 +2046,7 @@ form .btn {
     font-weight: normal;
     font-family: 'Helvetica';
     color: #ffffff;    
-    transition: all 0.2s ease-in;
+    transition: all 0.2s linear;
 }
 .jumpheading {
     color: #807f7f;
@@ -2084,10 +2084,10 @@ form .btn {
             display: block;
             font-size: 12px;
             text-align: center;
-            transition: all 0.2s ease-in;            
+            transition: all 0.2s linear;            
             &:hover {
                color: #e91f4a;
-               transition: all 0.2s ease-in;           }
+               transition: all 0.2s linear;           }
        }
    }
 }
@@ -2269,7 +2269,7 @@ form .btn {
         .btn {
             display: block;
             margin-top: 25px !important;
-            transition: all 0.2s ease-in;
+            transition: all 0.2s linear;
         }
         .dropdate-select {
             width: 45px !important;
@@ -2290,7 +2290,7 @@ form .btn {
         .btn {
             display: block;
             margin-top: 25px !important;
-            transition: all 0.2s ease-in;
+            transition: all 0.2s linear;
         }
         .dropdate-select {
             width: 45px !important;
@@ -2453,7 +2453,7 @@ form .btn {
     cursor: pointer;
     align-items: center;
     margin-right: 40px;
-    transition: all 0.2s ease-in;
+    transition: all 0.2s linear;
     
     i {
         color: #e91f4a;
@@ -2463,7 +2463,7 @@ form .btn {
     }
     &:hover {
         background-color: #e91f4a;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
         i {
             color: #fff;
         }
@@ -2571,7 +2571,7 @@ form .btn {
     float: initial;
     display: block;
     clear: both;    
-    transition: all 0.2s ease-in;
+    transition: all 0.2s linear;
 }
 .warning {
     color:red;
@@ -3263,7 +3263,7 @@ text-shadow: 2px 2px 6px rgba(150, 150, 150, 1);    }
     width: auto !important;
     padding: 6px 15px !important;
     color: #fff !important;    
-    transition: all 0.2s ease-in;    
+    transition: all 0.2s linear;    
 }
 p.fix-h {
     height: 85px !important;
@@ -3272,12 +3272,12 @@ p.fix-h {
 #section3 .section-container:hover {
     a.btn {
         color: #fff !important;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
     }
 }
 .btn:hover {
     border: 1px solid transparent !important;
-    transition: all 0.2s ease-in;
+    transition: all 0.2s linear;
 }
 .side-column {
     margin-left: 50px;
@@ -3286,11 +3286,11 @@ p.fix-h {
     }
     a {
         color: #807f7f;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
     }
     a:hover {
         color: #e91f4a;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
     }
 }
 .days-of-the-week {
@@ -3305,10 +3305,10 @@ p.fix-h {
 a.news-btn {
     font-size: 13px;
     margin-top: 15px !important;
-    transition: all 0.2s ease-in;
+    transition: all 0.2s linear;
 
     &:hover {
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
     }
 }
 .content {
@@ -3365,11 +3365,11 @@ img.outimg {
     }
     button.button.single_add_to_cart_button {
         height: 32px !important;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
 
         &:hover {
             background-color: #C1052D;
-            transition: all 0.2s ease-in;
+            transition: all 0.2s linear;
 
         }
     }
@@ -3418,12 +3418,12 @@ img.outimg {
         font-size: 18px;
     }
     .inner-wrapper .content {
-        transition: all 0.3s ease-in;
+        transition: all 0.3s linear;
     }
     .inner-wrapper:hover {
         .content {
             opacity: 0.8;
-            transition: all 0.3s ease-in;
+            transition: all 0.3s linear;
             background-color: #fff;
         }
     }
@@ -3659,11 +3659,11 @@ p {
         color: #fff;
         font-size: 14px;
         letter-spacing: 1px;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
 
         &:hover {
             background-color: #e91f4a;
-            transition: all 0.2s ease-in;
+            transition: all 0.2s linear;
         }
     }
 }
@@ -3679,7 +3679,7 @@ p {
         top: 0 !important;
         padding: 10px 10px 0;
         transform: translateX(150px);
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
         overflow: scroll;
         .subs {
             border-bottom: 1px solid #5a5a5a;
@@ -3699,12 +3699,12 @@ p {
     }
     .nav-links.show-it {
         transform: translateX(0px);
-        transition: all 0.3s ease-in;
+        transition: all 0.3s linear;
 
         .subs {
             &:hover {
                 background-color: #e91f4a;
-                transition: all 0.2s ease-in;
+                transition: all 0.2s linear;
             }
         }
     }
@@ -3718,7 +3718,7 @@ p {
             width: 40px;
             margin-top: 6px;
             margin-left: 12px;
-            transition: all 0.1s ease-in;
+            transition: all 0.1s linear;
         }
         .plus > a > span {
             margin-top: 17px;
@@ -3736,14 +3736,14 @@ p {
             transform: rotate(45deg);
             border-bottom: 3px solid #fff;
             margin-top: 19px;
-            transition: transform 0.2s ease-in;
+            transition: transform 0.2s linear;
 
         }
         .bb-l {
             transform: rotate(-45deg);
             border-bottom: 3px solid #fff;
             margin-top: -2px;
-            transition: transform 0.2s ease-in;
+            transition: transform 0.2s linear;
 
         }
     }
@@ -3774,14 +3774,14 @@ p {
                 letter-spacing: 1px !important;
                 color: #898B8E !important;
                 border: 1px solid #898B8E;
-                transition: all 0.2s ease-in;
+                transition: all 0.2s linear;
 
                 &:hover {
                     border-color: #e91f4a !important;
                     background: #e91f4a !important;
                     opacity: 1;
                     color: #fff !important;
-                    transition: all 0.2s ease-in;
+                    transition: all 0.2s linear;
 
                 }
             }
@@ -3855,14 +3855,14 @@ button.button.alt.single_add_to_cart_button:hover {
             height: inherit;
             background-size: cover !important;
             transform: scale(1);
-            transition: transform 0.3s ease-in;
+            transition: transform 0.3s linear;
         }
 
     }
     .product-item:hover {
         .product-img-inside {            
             transform: scale(1.06);
-            transition: transform 0.3s ease-in;
+            transition: transform 0.3s linear;
         }
     }
 }
@@ -3874,13 +3874,13 @@ button.button.alt.single_add_to_cart_button:hover {
         height: inherit;
         width: 100%;
         transform: scale(1);
-        transition: all 0.3s ease-in;
+        transition: all 0.3s linear;
         background-size: cover !important;
     }
 }
 .contd-products .inner-wrapper .product-img:hover {
     transform: scale(1.1);
-    transition: all 0.3s ease-in;
+    transition: all 0.3s linear;
 }
 .project-wrapper {
     overflow: hidden;
@@ -3890,13 +3890,13 @@ button.button.alt.single_add_to_cart_button:hover {
     .project-img {
         height: 200px;
         background-size: cover;
-        transition: all 0.1s ease-in;
+        transition: all 0.1s linear;
         overflow: hidden;  
         .overlay {
             background-color: #e91f4a;
             height: inherit;
             width: 98.4%;
-           // transition: all 0.1s ease-in;
+           // transition: all 0.1s linear;
 
             @media (max-width: 1025px) {
                 display: none;
@@ -3909,12 +3909,7 @@ button.button.alt.single_add_to_cart_button:hover {
 .cd-timeline-content:hover {
     .project-img {
         transform: scale(1.1);
-
-        .overlay {
-            background-color: transparent;
-           transition: all 0.2s ease-in;           
-            
-        }
+        transition: all .5s linear;
     }
 }
 .ellipsis {
@@ -3925,12 +3920,7 @@ button.button.alt.single_add_to_cart_button:hover {
 .cd-timeline-content.hover {
     .project-img {
         transform: scale(1.1);
-
-        .overlay {
-            background-color: transparent;
-           transition: all 0.2s ease-in;           
-            
-        }
+        transition: all .5s linear;
     }
 }
 .popup {
@@ -3958,11 +3948,11 @@ button.button.alt.single_add_to_cart_button:hover {
 .cd-timeline-block {
     margin: 95px 0 !important;
     .cd-picture {
-        transition: all 0.2s ease-in;
+        transition: all 0.3s linear;
     }
     &:hover {
         .cd-picture {
-            transition: all 0.2s ease-in;
+            transition: all 0.3s linear;
         }
     }
 }
@@ -4013,10 +4003,10 @@ p.category {
     border-color: #a0a0a0;
 }
 .woocommerce .button {
-    transition: all 0.2s ease-in;
+    transition: all 0.2s linear;
     &:hover {
         background-color: #c31439 !important;
-        transition: all 0.2s ease-in;
+        transition: all 0.2s linear;
 
     } 
 }
@@ -4304,7 +4294,7 @@ p.category {
 }
 .modal {
     top: 20%;
-}
+}   
 .dropdown {
     .active {
         background-color: #E9204A !important;
